@@ -10,14 +10,14 @@ DB201A.CBL     68   56    0       4       8 OK
 DB202A.CBL     24   20    0       0       4 OK
 DB203A.CBL     20   18    0       0       2 OK
 DB204A.CBL      4    3    0       0       1 OK
-DB205A.CBL      1    1    0       0       0 OK
+DB205A.CBL      0    0    0       0       0 OK
 DB301M.CBL      1    1    0       0       0 OK
 DB302M.CBL      1    1    0       0       0 OK
 DB303M.CBL      1    1    0       0       0 OK
 DB304M.CBL      0    0    0       0       0 OK
 DB305M.CBL      1    1    0       0       0 OK
 --------    ----- ---- ---- ------- -------
-Total         436  405    0       4      27
+Total         435  404    0       4      27
 
 Number of programs:    16
 Successfully executed: 16
